[package]
name = "file-search"
version = "0.1.7"
edition = "2021"
license = "MPL-2.0"
authors = ["Nordine Bittich"]
description = "File indexing and search"
repository = "https://github.com/nbittich/file-search"
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
axum = { version = "0.6.20", features = ["headers", "tracing"] }
axum-extra = "0.7.7"
calamine = { version = "0.21.2", features = ["chrono", "dates"] }
chrono = "0.4.26"
csv = "1.2.2"
serde = { version = "1.0.183", features = ["derive"] }
serde_json = "1.0.104"
tantivy = "0.20.2"
tokio = { version = "1.31.0", features = ["full"] }
tracing = "0.1.37"
tracing-subscriber = { version = "0.3.17", features = [
  "env-filter",
  "time",
  "local-time",
] }
uuid = { version = "1.4.1", features = ["v4"] }
tower = "0.4.13"
tower-http = { version = "0.4.3", features = ["fs", "trace", "redirect"] }
time = { version = "0.3.25", features = [
  "formatting",
  "local-offset",
  "macros",
] }
pdf-extract = "0.6.5"
regex = "1.9.3"
# The profile that 'cargo dist' will build with
[profile.dist]
inherits = "release"
lto = "thin"

# Config for 'cargo dist'
[workspace.metadata.dist]
# The preferred cargo-dist version to use in CI (Cargo.toml SemVer syntax)
cargo-dist-version = "0.1.0"
# CI backends to support (see 'cargo dist generate-ci')
ci = ["github"]
# The installers to generate for each app
installers = ["shell"]
# Target platforms to build apps for (Rust target-triple syntax)
targets = ["x86_64-unknown-linux-gnu"]
