[package]
name = "file-search"
version = "0.1.8"
edition = "2021"
license = "MPL-2.0"
authors = ["Nordine Bittich"]
description = "File indexing and search"
repository = "https://github.com/nbittich/file-search"
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
axum = { version = "0.6.20", features = ["headers", "tracing"] }
axum-extra = "0.7.7"
calamine = { version = "0.21.2", features = ["chrono", "dates"] }
chrono = "0.4.28"
csv = "1.2.2"
serde = { version = "1.0.188", features = ["derive"] }
serde_json = "1.0.105"
tantivy = "0.21.0"
tokio = { version = "1.32.0", features = ["full"] }
tracing = "0.1.37"
tracing-subscriber = { version = "0.3.17", features = [
  "env-filter",
  "time",
  "local-time",
] }
uuid = { version = "1.4.1", features = ["v4"] }
tower = "0.4.13"
tower-http = { version = "0.4.3", features = ["fs", "trace", "redirect"] }
time = { version = "0.3.28", features = [
  "formatting",
  "local-offset",
  "macros",
] }
pdf-extract = "0.7.0"
regex = "1.9.4"
# The profile that 'cargo dist' will build with
[profile.dist]
inherits = "release"
lto = "thin"

# Config for 'cargo dist'
[workspace.metadata.dist]
# The preferred cargo-dist version to use in CI (Cargo.toml SemVer syntax)
cargo-dist-version = "0.2.0"
# CI backends to support (see 'cargo dist generate-ci')
ci = ["github"]
# The installers to generate for each app
installers = ["shell"]
# Target platforms to build apps for (Rust target-triple syntax)
targets = ["x86_64-unknown-linux-gnu"]
