[package]
name = "file-search"
version = "0.1.11"
edition = "2021"
license = "MPL-2.0"
authors = ["Nordine Bittich"]
description = "File indexing and search"
repository = "https://github.com/nbittich/file-search"
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
axum = { version = "0.6.20", features = ["headers", "tracing"] }
axum-extra = "0.8.0"
calamine = { version = "0.22.0", features = ["chrono", "dates"] }
chrono = "0.4.31"
csv = "1.3.0"
serde = { version = "1.0.192", features = ["derive"] }
serde_json = "1.0.108"
tantivy = "0.21.1"
tokio = { version = "1.33.0", features = ["full"] }
tracing = "0.1.40"
tracing-subscriber = { version = "0.3.17", features = [
  "env-filter",
  "time",
  "local-time",
] }
uuid = { version = "1.5.0", features = ["v4"] }
tower = "0.4.13"
tower-http = { version = "0.4.4", features = ["fs", "trace", "redirect"] }
time = { version = "0.3.30", features = [
  "formatting",
  "local-offset",
  "macros",
] }
pdf-extract = "0.7.2"
regex = "1.10.2"
# The profile that 'cargo dist' will build with
[profile.dist]
inherits = "release"
lto = "thin"

# Config for 'cargo dist'
[workspace.metadata.dist]
# The preferred cargo-dist version to use in CI (Cargo.toml SemVer syntax)
cargo-dist-version = "0.3.1"
# CI backends to support
ci = ["github"]
# The installers to generate for each app
installers = ["shell"]
# Target platforms to build apps for (Rust target-triple syntax)
targets = ["x86_64-unknown-linux-gnu"]
# Publish jobs to run in CI
pr-run-mode = "skip"
